# IML4-Atividade1

./: .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
src/arxiv_scraper/: config.py  database.py  models.py  scraper.py
